# mlops-template

./: README.md  pyproject.toml
src/mlops_template/: __init__.py  add_model_resistry.py  create_cloudwatch_alarm.py  endpoint.py  inference.py  lambda.py  model_monitor.py  train.py  train_bk.py  training_job.py  training_job_bk.py
