[project]
name = "mlops-template"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nagaoka-takuya", email = "nagaoka.takuya.38u@gmail.com" }
]
dependencies = [
    "sagemaker-training>=4.7.4",
    "sagemaker-inference>=1.10.1",
    "sagemaker>=2.223.0",
    "torch>=2.3.1",
    "numpy>=2.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mlops_template"]
